# fastapi_mcp_sse

./: .gitignore  HOWTO.md  README.md  README.zh-CN.md  agent.py  fastagent.config.yaml  fastagent.jsonl  pyproject.toml  requirements.txt
docs/: starlette.md
scripts/: starlette_weather_server.py
src/: app.py  app_auth.py  auth.py  routes.py  server.py  weather.py  weather_app.py  weather_auth.py  weather_support.py
